--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 	<title>Atom App</title>
 	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./resources/icons/sprite/sprite.css">
-	<link rel="stylesheet" href="./dist/bundle.css?rev=2040ed6c047bf4e1b133ab9d7b084996">
+	<link rel="stylesheet" href="./dist/bundle.css?rev=3b5e04be9e8efa3d7425c0cdb8b9bca0">
 	<!--?rev=@@hash-->
 </head>
 
@@ -54,33 +54,30 @@
 										<div class="menu__item">
 											О компании
 										</div>
-									</a>
-									<a href="#">
-										<div class="menu__item menu__item--active">
-											Услуги
-											<div class="menu__other-items">
-												<a href="#" class="menu__other-item">Услуга 1</a>
-												<a href="#" class="menu__other-item">Услуга 2</a>
-												<a href="#" class="menu__other-item">Услуга 3</a>
-												<a href="#" class="menu__other-item">Услуга 4</a>
-												<a href="#" class="menu__other-item">Услуга 5</a>
-											</div>
+									</a>					
+									<div class="menu__item menu__item--active">
+										<a href="#" class="menu__item-link">Услуги</a>
+										<div class="menu__other-items">
+											<a href="#" class="menu__other-item">Услуга 1</a>
+											<a href="#" class="menu__other-item">Услуга 2</a>
+											<a href="#" class="menu__other-item">Услуга 3</a>
+											<a href="#" class="menu__other-item">Услуга 4</a>
+											<a href="#" class="menu__other-item">Услуга 5</a>
 										</div>
-									</a>
-									<a href="#">
-										<div class="menu__item">
-											Каталог
-											<div class="menu__other-items">
-												<a href="#" class="menu__other-item">Трубы</a>
-												<a href="#" class="menu__other-item">Уголок</a>
-												<a href="#" class="menu__other-item">Полоса</a>
-												<a href="#" class="menu__other-item">Проволока</a>
-												<a href="#" class="menu__other-item">Балка</a>
-												<a href="#" class="menu__other-item">Строительная арматура</a>
-												<a href="#" class="menu__other-item">Швеллер</a>
-											</div>
+									</div>
+									<div class="menu__item">
+										<a href="#" class="menu__item-link">Каталог</a>
+										<div class="menu__other-items">
+											<a href="#" class="menu__other-item">Трубы</a>
+											<a href="#" class="menu__other-item">Уголок</a>
+											<a href="#" class="menu__other-item">Полоса</a>
+											<a href="#" class="menu__other-item">Проволока</a>
+											<a href="#" class="menu__other-item">Балка</a>
+											<a href="#" class="menu__other-item">Строительная арматура</a>
+											<a href="#" class="menu__other-item">Швеллер</a>
 										</div>
-									</a>
+									</div>
+									
 									<a href="#">
 										<div class="menu__item">
 											Доставка
@@ -170,10 +167,10 @@
 			<!--end-->
 
 			<!--begin-->
-			<section class="content">
+			<div class="content">
 
 				<!--begin-->
-				<section class="slider">
+				<div class="slider">
 					<div id="main-slider" class="carousel slide" data-ride="carousel">
 						<ol class="carousel-indicators">
 							<li data-target="#main-slider" data-slide-to="0" class="active"></li>
@@ -258,7 +255,7 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</div>
 				<!--end-->
 
 				<!--begin-->
@@ -525,7 +522,7 @@
 				</section>
 				<!--end-->
 
-			</section>
+			</div>
 			<!--end-->
 
 			<!--begin-->
@@ -621,7 +618,7 @@
 			<!--end-->
 
 			<!--begin-->
-			<section class="modals">
+			<div class="modals">
 				<div class="modals__overlay"></div>
 				<div class="atm-modal" data-modal-target="0">
 					<div data-modal-close class="atm-modal__close js-atm-modal__close">
@@ -667,7 +664,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!--end-->
 
 		</div>
