news page added

--- a/client/secondary.html
+++ b/client/secondary.html
@@ -6,8 +6,10 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 	<title>Atom App</title>
 	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./bower_components/slick-carousel/slick/slick.css">
+	<link rel="stylesheet" href="./bower_components/slick-carousel/slick/slick-theme.css">
 	<link rel="stylesheet" href="./resources/icons/sprite/sprite.css">
-	<link rel="stylesheet" href="./dist/bundle.css?rev=6ffa7479c7984eda3edbbf7f86994c99">
+	<link rel="stylesheet" href="./dist/bundle.css?rev=e3f1ef17dffcd35ef08a5e527697a323">
 	<!--?rev=@@hash-->
 </head>
 
@@ -373,7 +375,8 @@
 	<script src="./bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="./bower_components/hammerjs/hammer.min.js"></script>
 	<script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="./dist/bundle.js?rev=a4eb0e1f6715d6b183f1e7eccffecba4"></script>
+	<script src="./bower_components/slick-carousel/slick/slick.min.js"></script>
+	<script src="./dist/bundle.js?rev=59e0126667296adb1ca80469e7b08569"></script>
 </body>
 
 </html>
