--- a/client/catalog.html
+++ b/client/catalog.html
@@ -172,53 +172,164 @@
 			<div class="content">
 
 				<!--begin-->
-				<section class="secondary">
+				<section class="catalog">
 					<div class="container">
-						<div class="skew"></div>
-						<h1 class="secondary__title">Текстовая страница</h1>
-						<h2 class="secondary__subtitle">Название текста</h2>
-						<div class="text-content">
-							<img src="./resources/img/image.png" class="text-content__pic" alt="image">
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-							</p>
-							<p>
-								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-							<p>
-								Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-							<br>
-							<br>
-							<br>
-							<p class="text-content__text--bold">
-								Porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non  numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem:
-							</p>
-
-							<ul class="text-content__list text-content__list--ul">
-								<li>Ut enim ad minima veniam, quis nostrum exercitationem</li>
-								<li>Corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur</li>
-							</ul>
-
-							<h2 class="text-content__title">Название текста</h2>
-
-							<p class="text-content__text--15">
-								Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?
-							</p>
-
-							<ol class="text-content__list text-content__text--15">
-								<li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
-								<li>Qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas</li>
-								<li>Molestias excepturi sint, obcaecati cupiditate non provident.</li>
-							</ol>
-
-							<p class="text-content__text--italic">
-								Similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga
-							</p>
-							
-						</div>
+						<div class="skew skew--position"></div>
+						<h1 class="catalog__title">Каталог продукции</h1>
+						<div class="catalog__items">
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--1.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">01</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Строительная арматура</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--2.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">02</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Лист</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--3.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">03</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Трубы</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--4.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">04</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Уголок</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--5.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">05</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Полоса</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--6.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">06</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Вентиляционное оборудование</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--7.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">07</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Проволока</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--8.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">08</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Балка</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--9.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">09</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Трубопроводная арматура</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--10.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">10</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Швеллер</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--11.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">11</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Круг</div>
+							</a>
+							<a href="#" class="catalog__item">
+								<img src="./resources/img/catalog/catalog-item--12.png" class="catalog__item-pic" alt="alt">
+								<div class="catalog__item-numbers">
+									<span class="catalog__item-number catalog__item-number--large">12</span>
+									<span class="catalog__item-number">/12</span>
+								</div>
+								<div class="skew skew--position"></div>
+								<div class="catalog__item-title">Квадрат</div>
+							</a>				
+						</div>		
 					</div>
 					
+				</section>
+				<!--end-->
+
+				<!--begin-->
+				<section class="edge">
+					<div class="container">
+						<div class="skew skew--position"></div>
+						<h2 class="edge__title">Преимущества покупки труб в <br> «Атом-СТАЛЬ»</h2>
+						<div class="edge__items">
+							<div class="edge__item">
+								<img src="./resources/img/catalog/edge--1.png" class="edge__item-pic" alt="alt">
+								<div class="edge__item-text">
+									Гарантированное качество продукции. Продукция соответствуют установленным требованиям и давно подтвердили все свои заявленные характеристики
+								</div>
+								<div class="skew"></div>
+							</div>
+							<div class="edge__item">
+								<img src="./resources/img/catalog/edge--2.png" class="edge__item-pic" alt="alt">
+								<div class="edge__item-text">
+									Доступность продукции. <br>
+									Мы не завышаем цены изделий, предоставляем скидки. Это позволяет вам купить нужные партии проката, не переплачивая.
+								</div>
+								<div class="skew"></div>
+							</div>
+							<div class="edge__item">
+								<img src="./resources/img/catalog/edge--3.png" class="edge__item-pic" alt="alt">
+								<div class="edge__item-text">
+									Помощь специалистов при выборе. Наши менеджеры знают весь сортамент стальных труб. Они готовы дать советы при заказе продукции.
+								</div>
+								<div class="skew"></div>
+							</div>
+							<div class="edge__item">
+								<img src="./resources/img/catalog/edge--4.png" class="edge__item-pic" alt="alt">
+								<div class="edge__item-text">
+									Доставка. <br>
+									Мы осуществляем <br>
+									ее быстро и грамотно.
+								</div>
+								<div class="skew"></div>
+							</div>
+						</div>
+					</div>	
 				</section>
 				<!--end-->
 
@@ -316,8 +427,6 @@
 				</div>
 			</footer>
 			<!--end-->
-
-		
 
 		</div>
 
