--- a/client/news.html
+++ b/client/news.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="./bower_components/slick-carousel/slick/slick.css">
 	<link rel="stylesheet" href="./bower_components/slick-carousel/slick/slick-theme.css">
 	<link rel="stylesheet" href="./resources/icons/sprite/sprite.css">
-	<link rel="stylesheet" href="./dist/bundle.css?rev=4418525b80afd482166fffcce475a76a">
+	<link rel="stylesheet" href="./dist/bundle.css?rev=5270ba9feb1eee867d1d52fc65e161cf">
 	<!--?rev=@@hash-->
 </head>
 
@@ -23,13 +23,15 @@
 					<div class="container">
 						<div class="header__info">
 							<div class="header__logo">
-								<div class="logo">
-									<div class="logo__pic"></div>
-									<div class="logo__text">
-										<span class="logo__sign logo__sign--bold">Атом</span>
-										<span class="logo__sign logo__sign--margin-left">Сталь</span>
+								<a href="/">
+									<div class="logo">
+										<div class="logo__pic"></div>
+										<div class="logo__text">
+											<span class="logo__sign logo__sign--bold">Атом</span>
+											<span class="logo__sign logo__sign--margin-left">Сталь</span>
+										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 							<div class="header__contact-items">
 								<div class="header__contact-item">
