--- a/client/secondary.html
+++ b/client/secondary.html
@@ -325,7 +325,7 @@
 		<div class="modals">
 			<div class="modals__overlay"></div>
 			<div class="atm-modal" data-modal-target="0">
-				<div data-modal-close class="atm-modal__close js-atm-modal__close">
+				<div data-modal-close class="atm-modal__close">
 					<i class="material-icons atm-modal__icon">clear</i>
 				</div>
 				<div class="atm-modal__body">
@@ -350,7 +350,7 @@
 				</div>
 			</div>
 			<div class="atm-modal" data-modal-target="1">
-				<div data-modal-close class="atm-modal__close js-atm-modal__close">
+				<div data-modal-close class="atm-modal__close">
 					<i class="material-icons atm-modal__icon">clear</i>
 				</div>
 				<div class="atm-modal__body">
